# winhider_zh

./: .gitignore  Cargo.toml  README.md  SECURITY.md  appver.txt  build.ps1  publish-winget.ps1  sign.cmd  storage.json
.github/: FUNDING.yml
.github/workflows/: build.yml  winget-update.yml
Misc/: gif_conversion.txt  inno.iss
app/: Cargo.toml  build.rs
app/src/: i18n.rs  main.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs
manifests/b/Bitmutex/Winhider/1.0.6/: Bitmutex.Winhider.installer.yaml  Bitmutex.Winhider.locale.en-US.yaml  Bitmutex.Winhider.yaml
manifests/b/Bitmutex/Winhider/1.0.7/: Bitmutex.Winhider.installer.yaml  Bitmutex.Winhider.locale.en-US.yaml  Bitmutex.Winhider.yaml
payload/: Cargo.toml
payload/src/: lib.rs
shipment/: Cargo.toml
shipment/src/: payload.rs
site/src/components/: CTA.astro  Features.astro  Header.astro  Hero.astro
site/src/content/docs/docs/: gui-mode.mdx  hotkeys.mdx  index.mdx
site/src/layouts/: Layout.astro
