[package]
name = "winhider"
version = "1.0.1"
edition = "2024"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = "0.27"
raw-window-handle = "0.6"
egui_extras = { version = "0.27", features = ["all_loaders"] }
image = { version = "0.24", features = ["default"] } 
windows-capture = "1.0.52" 
crossbeam-channel = "0.5"
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_Security",
]
