[package]
name = "winhider-cli"
version = "1.0.1"
edition = "2024"

[build-dependencies]
winres = "0.1"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_Security",
    "Win32_System_ProcessStatus",
] }
clap = { version = "4.0", features = ["derive"] }